<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLandingPage">

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="210dp"
        android:layout_height="75dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/logoutButtonUserPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="210dp"
        android:layout_height="75dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="432dp"
        android:gravity="center"
        android:text="@string/Menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toEndOf="@+id/logoutButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cartButton"
        android:layout_width="210dp"
        android:layout_height="75dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="72dp"
        android:text="@string/cartButtonUserPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAddress"
        android:layout_width="265dp"
        android:layout_height="47dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="76dp"
        android:gravity="center"
        android:text="@string/addressText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>