<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <Button
        android:id="@+id/signupButton_Database"
        android:layout_width="231dp"
        android:layout_height="131dp"
        android:gravity="center"
        android:text="@string/signUpButtonDatabase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameInputSignUp"
        android:layout_width="368dp"
        android:layout_height="126dp"
        android:ems="10"
        android:hint="@string/usernameInputSignUp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979" />

    <EditText
        android:id="@+id/passwordInputSignUp"
        android:layout_width="368dp"
        android:layout_height="126dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/passwordInputSignUp"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordInputCheck"
        android:layout_width="368dp"
        android:layout_height="126dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/passwordInputCheckSignUp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/signupButton_Database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sameUsernameErrorTextView"
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="bottom|center"
        android:text="@string/UsernameErrorText"
        android:textColor="#F44336"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/usernameInputSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>

