<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">

    <Button
        android:id="@+id/addMenuItemButtonSubmit"
        android:layout_width="420dp"
        android:layout_height="142dp"
        android:layout_marginBottom="484dp"
        android:text="@string/addItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPrice"
        app:layout_constraintVertical_bias="0.855" />

    <EditText
        android:id="@+id/itemNameInput"
        android:layout_width="378dp"
        android:layout_height="136dp"
        android:layout_marginTop="284dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hintItemName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemDescription"
        android:layout_width="378dp"
        android:layout_height="122dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hintDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNameInput" />

    <EditText
        android:id="@+id/enterPrice"
        android:layout_width="405dp"
        android:layout_height="134dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/hintPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>